--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -55,7 +55,7 @@ html(class="no-js", lang="ru")
                         li.navigation__list_item
                             a(href="#" title="tab2") Информация
                         li.navigation__list_item
-                            a(href="#" title="tab3") Привелегии
+                            a(href="#" title="tab3") Привилегии
             section.tabs
                 .tabs__container
                     #tab1.tabs-content
