--- a/builds/build_ver-Tue_Mar_21_2017_18_54_57/static/css/main.css
+++ b/builds/build_ver-Tue_Mar_21_2017_18_54_57/static/css/main.css
@@ -457,7 +457,7 @@ $CustomFont: 'CustomFont', Helvetica, Arial, sans-serif;
   max-width: 962px;
   width: 100%;
   margin: 0 auto;
-  padding-top: 9px;
+  padding-top: 10px;
   padding-bottom: 14px;
   box-sizing: border-box;
 }
@@ -549,8 +549,8 @@ $CustomFont: 'CustomFont', Helvetica, Arial, sans-serif;
 .navigation__list_item {
   display: inline;
   padding-top: 12px;
-  padding-left: 15px;
-  padding-right: 13px;
+  padding-left: 14px;
+  padding-right: 14px;
   padding-bottom: 30px;
   box-sizing: border-box;
 }
@@ -559,6 +559,10 @@ $CustomFont: 'CustomFont', Helvetica, Arial, sans-serif;
   text-decoration: none;
   color: #000;
   font-family: "PTSansRegular";
+}
+
+.navigation__list_item a:hover {
+  color: #e7435d;
 }
 
 *::-ms-backdrop, .navigation__list_item {
